# distributed-message-demo-kafka

./: .gitignore  README.md  makefile
consumer/: .gitignore  Dockerfile  kafka_client.py  main.py  pyproject.toml
infra/consumer/: values.yaml
infra/message-system/: Chart.yaml  values.yaml
infra/producer/: values.yaml
infra/producer/templates/: deployment.yaml
producer/: .gitignore  Dockerfile  kafka_client.py  main.py  pyproject.toml
