[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Yaniv Ben Zvi <yanivbenzvi023@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
aiokafka = "^0.7.2"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
